# synthoseis

./: .gitignore  Containerfile  environment.yml  main.py  pyproject.toml
config/: example.json
synthoseis/: main.py  run.py
synthoseis/datagenerator/: Closures.py  Faults.py  Geomodels.py  Horizons.py  Parameters.py  Salt.py  Seismic.py  fluvsim.py  wavelets.py
synthoseis/rockphysics/: RockPropertyModels.py  rpm_example.py
