[tool.poetry]
name = "synthoseis"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
h5py = "^3.9.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
scikit-image = "^0.21.0"
scipy = "^1.11.1"
tqdm = "^4.66.1"
tables = "^3.8.0"
plotly = "^5.16.0"
bruges = "^0.5.4"
noise = "^1.2.2"
boto3 = "^1.28.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
